# ML_2

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  module_2.md  pyproject.toml  triton.Dockerfile  triton_client.py
ML_2/: model_imply.py  wandb_config.yml
notebooks/: improved_baseline.ipynb  neural_attempt.ipynb  rules_normalization.ipynb
