[project]
name = "ml-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Anisimov Aleksey",email = "fallengalaxy5000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "num2words (>=0.5.14,<0.6.0)",
    "transformers (>=4.52.3,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "wandb (>=0.20.1,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
